--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,13 @@ services:
     build: .
     ports:
       - 3000:3000
-    volumes:
-      - ./app:/app/app
-    env_file:
-      - .env
+    environment:
+      FORKS: 1
+      NODE_ENV: development # todo -> change to production
+      PORT: 3000
+      DB_LOCATION: ./data/robotswebsite.db
+    # volumes:
+    #   - ./app:/stackzero/app
+    #   - ./core:/stackzero/core
+    # env_file:
+    #   - .env
