--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,6 +1,6 @@
 services:
   stackzero:
-    image: ghcr.io/robertfent/stackzero:production
+    image: ghcr.io/robertfent/stackzero:v1.0.0-staging
     command: ["npm", "run", "start-local"]
     ports:
       - 3000:3000
@@ -13,4 +13,4 @@ services:
       - ./app:/stackzero/app
       - ./static:/stackzero/static
       - ./data:/stackzero/data
-    #   - ./core:/stackzero/core # todo: make core overwriteable
+      # - ./core:/stackzero/core # todo: make core overridable
