Updated .env template for production usage and shortened docker compose

--- a/.env-template
+++ b/.env-template
@@ -1,9 +1,8 @@
-GITHUB_TOKEN=
-FORKS=
-NODE_ENV=
-PORT=
-DB_LOCATION=
-VIRTUAL_HOST=
-VIRTUAL_PORT=
+# COOKIE_SECRET= paste output of 'openssl rand -hex 32'
+COOKIE_SECRET=
+DB_LOCATION=./data/mywebsite.db
+FORKS=2
 LETSENCRYPT_EMAIL=
 LETSENCRYPT_HOST=
+VIRTUAL_HOST=
+VIRTUAL_PORT=3000
