--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,9 @@ services:
     ports:
       - 3000:3000
     env_file: .env
+    environment:
+      - NODE_ENV=production
+      - PORT=3000
     volumes:
       - ./app:/stackzero/app
       - ./static:/stackzero/static
